test_regress/t/t_class_mod_bad.out
%Error: t/t_class_mod_bad.v:21:7: '::' expected to reference a class/package but referenced 'MODULE 'M''
                                : ... Suggest '.' instead of '::'
   21 |       M::Cls p;
      |       ^
%Error: Exiting due to
